--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,102 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*.so
-*.dll
-*.pyd
+*$py.class
 
-# Virtual environment
-.venv/
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
 env/
-venv/
-ENV/
+build/
+dist/
 *.egg-info/
 
-# Jupyter Notebook Checkpoints
-.ipynb_checkpoints/
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
 
-# Logs and Outputs
-logs/
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
 *.log
+local_settings.py
 
-# Model Checkpoints
-checkpoints/
-*.pth
-*.ckpt
+# Flask stuff:
+instance/
+.webassets-cache
 
-# Dataset Cache and Temporary Files
-*.tmp
-*.cache
-*.bak
-*.swp
-*.DS_Store
-*.tar.gz
+# Scrapy stuff:
+.scrapy
 
-# VSCode Settings
-.vscode/
+# Sphinx documentation
+docs/_build/
 
-# Python-specific
+# PyBuilder
+.target/
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# dotenv
+.env
+
+# virtualenv
+venv/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+# Pyre type checker
+.pyre/
+
+# End of https://www.toptal.com/developers/gitignore/api/python
+
+# Custom ignores
 *.pkl
-*.joblib
-
-# Mac OS
-.DS_Store
-
-# Colab / Google Drive Mounts
-gdrive/
-drive/
-
-# Ignore environment config secrets
-config/*.local.yaml
-config/secret*.yaml
-
-# Don't ignore Jupyter notebooks
-!*.ipynb
+*.csv
+*.log
+*.txt
